[package]
name = "rewms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = { version = "4", features = ["openssl"] }
awc = { version = "3.1.0", features = ["openssl"] }
env_logger = "0.10.0"
futures = "0.3.25"
image = "0.24.5"
itertools = "0.10.5"
log = "0.4.17"
png = "0.17.7"
qstring = "0.7.2"
rayon = "1.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
